<resources>
    <string name="app_name">DicodingAndroidSubmission</string>
    <string name="book_list">Daftar Buku</string>
    <string name="book_detail">Detail Buku</string>
    <string name="title">Judul Buku</string>
    <string name="author">Nama Penulis</string>
    <string name="star">Jumlah Bintang</string>
    <string name="rating">Jumlah Rating</string>
    <string name="reviewer">Jumlah Reviewer</string>
    <string name="description">Deskripsi Buku</string>
    <string name="genre">Genre Buku</string>
    <string-array name="data_title">
        <item>When the Moon Hatched</item>
        <item>Restless Stars</item>
        <item>Intermezzo</item>
        <item>Here One Moment</item>
        <item>The Ministry of Time</item>
        <item>Five Broken Blades</item>
        <item>First Lie Wins</item>
        <item>The Teacher</item>
        <item>Nuclear War: A Scenario</item>
        <item>The Black Bird Oracle</item>
    </string-array>
    <string-array name="data_author">
        <item>Sarah A. Parker</item>
        <item>Caroline Peckham, Susanne Valenti</item>
        <item>Sally Rooney</item>
        <item>Liane Moriarty</item>
        <item>Kaliane Bradley</item>
        <item>Mai Corland</item>x
        <item>Ashley Elston</item>
        <item>Freida McFadden</item>
        <item>Annie Jacobsen</item>
        <item>Deborah Harkness</item>
    </string-array>
    <string name="star_label">Stars</string>
    <string-array name="data_star">
        <item>4.08</item>
        <item>4.29</item>
        <item>4.05</item>
        <item>4.09</item>
        <item>3.61</item>
        <item>3.83</item>
        <item>4.02</item>
        <item>3.92</item>
        <item>4.44</item>
        <item>4.12</item>
    </string-array>
    <string name="rating_label">Ratings</string>
    <string-array name="data_rating">
        <item>(129,749)</item>
        <item>(36,313)</item>
        <item>(72,781)</item>
        <item>(74,420)</item>
        <item>(75,481)</item>
        <item>(22,603)</item>
        <item>(507,563)</item>
        <item>(577,500)</item>
        <item>(20,295)</item>
        <item>(22,379)</item>
    </string-array>
    <string name="reviewer_label">Reviewers</string>
    <string-array name="data_reviewer">
        <item>20,616</item>
        <item>4,402</item>
        <item>14,770</item>
        <item>9,134</item>
        <item>14,202</item>
        <item>5,288</item>
        <item>47,682</item>
        <item>58,441</item>
        <item>3,706</item>
        <item>2,367</item>
    </string-array>
    <string name="source">Sumber:</string>
    <string name="source_url">goodreads.com</string>
    <string name="share">Recommend This Book</string>
    <string name="user_name">Muhamad Rizki</string>
    <string name="user_email">mhmdrizki.dev@gmail.com</string>
    <string name="linkedin">Linkedin</string>
    <string name="github">Github</string>
    <string name="source_code">Source Code</string>
</resources>