<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    card_view:cardCornerRadius="4dp"
    android:id="@+id/card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_cover"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@+id/img_item_cover"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_cover" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_title"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            tools:text="@string/author" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_description"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_description">

            <TextView
                android:id="@+id/tv_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/star"
                android:textSize="11sp"
                card_view:drawableStartCompat="@drawable/star_12dp"
                android:drawablePadding="2dp"/>

            <TextView
                android:id="@+id/tv_reviewer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reviewer"
                android:textSize="11sp"
                card_view:drawableStartCompat="@drawable/person_12dp"
                android:drawablePadding="2dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>