<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/material_dynamic_primary50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_photo"
            android:layout_width="210dp"
            android:layout_height="200dp"
            android:layout_marginTop="128dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000"
            app:layout_constraintBottom_toBottomOf="@id/tv_background"
            app:layout_constraintEnd_toEndOf="@id/tv_background"
            app:layout_constraintStart_toStartOf="@id/tv_background"
            app:layout_constraintTop_toTopOf="@id/tv_background"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_user_photo"
            app:layout_constraintStart_toStartOf="@+id/img_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_user_photo" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/user_email"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <Button
            android:id="@+id/btn_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/material_dynamic_primary60"
            android:text="@string/linkedin"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />

        <Button
            android:id="@+id/btn_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/github"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_linkedin" />

        <Button
            android:id="@+id/btn_source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#424242"
            android:text="@string/source_code"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_github" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>